# GP2040-CE

./: CMakeLists.txt  GP2040-CE_0.7.3_PicoW.uf2
configs/PicoW/: BoardConfig.h
headers/: BtStackUtils.h  btstack.h  btstack_config.h  gamepad.h  gp2040.h  helper.h  lwipopts-bt.h  tusb_config.h
headers/addons/: pleds.h
headers/gamepad/: GamepadDescriptors.h
headers/gamepad/descriptors/: SerialDescriptors.h
lib/: CMakeLists.txt
lib/TinyUSB_Gamepad/: CMakeLists.txt
lib/TinyUSB_Gamepad/src/: net_driver.cpp  usb_descriptors.cpp  webserver_descriptors.h
lib/lwip-port/: lwipopts.h
lib/picow_access_point/: CMakeLists.txt  picow_access_point.c  picow_access_point.h
lib/rndis/: rndis.c
proto/: enums.proto
src/: btstack.cpp  config_legacy.cpp  config_utils.cpp  configmanager.cpp  gamepad.cpp  gp2040.cpp  gp2040aux.cpp  storagemanager.cpp
src/addons/: board_led.cpp  buzzerspeaker.cpp  i2cdisplay.cpp  neopicoleds.cpp  playernum.cpp
src/configs/: webconfig.cpp
src/gamepad/: GamepadDescriptors.cpp
www/server/: app.js
